# Gomoku_Game-

./: .dockerignore  .gitignore  Dockerfile  HTTPS_SETUP_GUIDE.md  README.md  SOCIAL_LOGIN_SETUP.md  check_data.py  check_db.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dockerfile  makefile  pyproject.toml
.github/workflows/: build.yml  check.yml  deploy.yml
app/accounts/: adapters.py  forms.py  middleware.py  models.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_userprofile.py  0003_add_rating_field.py  0004_userprofile_chat_banned_until_and_more.py  0005_add_profile_image.py  0006_add_default_avatar.py
app/games/: admin.py  matchmaking.py  models.py  tasks.py  tiers.py  urls.py  views.py
app/games/migrations/: 0001_initial.py  0002_gamehistory.py  0003_game_black_time_remaining_game_last_move_time_and_more.py  0004_game_black_ready_game_game_started_game_white_ready.py  0005_game_title.py  0006_game_rematch_black_game_rematch_white.py  0007_game_password.py  0008_directmessage_friend_friendrequest.py  0009_lobbymessage.py  0010_report_sanction_report_games_repor_status_599af2_idx_and_more.py
app/games/tests/: test_omok_rules.py
app/games/utils/: consumers.py  direct_message_consumer.py  matchmaking_consumer.py  notification_consumer.py  omok.py  routing.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py
nginx/: Dockerfile  nginx-ssl.conf  nginx.conf
static/: manifest.json  sw.js
static/.well-known/: assetlinks.json
static/js/: omok-ai.js
templates/account/: base_auth.html  delete_account.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  privacy_policy.html  profile.html  profile_edit.html  signup.html  suspended.html  terms_of_service.html
templates/games/: admin_panel.html  ai_game.html  friends.html  history.html  lobby.html  message_room.html  room.html
templates/includes/: heartbeat.html
templates/registration/: base_auth.html  login.html  signup.html
templates/socialaccount/: signup.html
(+1 files in other folders)
