[project]
name = "gomoku-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4",
    "channels-redis>=4",
    "daphne>=4",
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
    "tree>=0.2.4",
]
