[project]
name = "gomoku-game"
version = "0.1.0"
description = "오목조목 (Omok Game) with Django Channels + Daphne"
readme = "README.md"
requires-python = ">=3.12"

# 런타임(프로덕션/컨테이너)에서 꼭 필요한 것만
dependencies = [
  "Django>=5.0,<6",
  "daphne>=4,<5",
  "channels>=4,<5",
  "channels-redis>=4,<5",
  "redis>=5", # redis-py 클라이언트 (channels-redis가 의존, 명시 추천)
  "psycopg[binary]>=3.2", # PostgreSQL 드라이버
  "django-environ>=0.12", # 환경변수 관리 (dotenv와 중복되니 이거 하나로 충분)
  "whitenoise>=6.7", # (Nginx 없이) 정적파일 서빙
  "django-allauth[socialaccount]>=65.0", # 소셜 로그인 (네이버, 카카오 등)
  "celery>=5.4", # 비동기 작업 큐
  "celery-types>=0.24.0",
  "typing-extensions>=4.15.0",
  "django-storages[s3]>=1.14", # S3 호환 스토리지 (Oracle Object Storage)
  "Pillow>=10.0", # 이미지 처리
]

# 개발 전용 패키지들은 별도 그룹으로
[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.14.4",
]

[tool.ruff.lint]
per-file-ignores = { "config/asgi.py" = ["E402"] }
